--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,22 @@ springdoc.swagger-ui.path=/docs
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-spring.ai.openai.api-key=${OPEN_AI_API_KEY}
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.base-url=https://api.groq.com/openai
+spring.ai.openai.chat.options.model=llama3-70b-8192
+
+# spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+# spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+# spring.rabbitmq.host=localhost
+# spring.rabbitmq.port=5672
+# spring.rabbitmq.username=cgenius
+# spring.rabbitmq.password=cgenius
+
+# spring.mail.host=sandbox.smtp.mailtrap.io
+# spring.mail.port=2525
+# spring.mail.username=${MAILTRAP_USERNAME}
+# spring.mail.password=${MAILTRAP_PASSWORD}
+# spring.mail.properties.mail.smtp.ssl.enable=false
+# spring.mail.properties.mail.smtp.starttls.enable=true
